--- a/config_env/config.env
+++ b/config_env/config.env
@@ -1,1 +1,8 @@
 PORT = 4000
+
+DB_NAME     = devcamp-2465880
+DB_USER     = root
+DB_PASSWORD = 
+DB_DIALECT  = mysql
+DB_HOST     = localhost
+DB_PORT     = 3307
